sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: value +=- is not a member of Int
      if( !plusPetit(i-1,i)){echange(i-1,i);ok=false; n+=-1}      
                                                       ^