sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var ok:Boolean = false
  var n:Int = getNombreValeurs()-1
  while(ok == false){
    ok=true
    for(i<-1 to n){
      if( !plusPetit(i-1,i)){echange(i-1,i);ok=false; n+=-1}      
    }
    
  }
}